--- a/docs/source/Reinforcement_Learning/AlphaZero/AlphaZero.ipynb
+++ b/docs/source/Reinforcement_Learning/AlphaZero/AlphaZero.ipynb
@@ -1,37 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "#AlphaZero\n",
-        "\n",
-        "AlphaZero is nice because it enabled us to us MCTS with DL\n"
-      ],
       "metadata": {
         "id": "ZurmHQZ2EqbL"
-      }
+      },
+      "source": [
+        "# AlphaZero\n",
+        "\n",
+        "AlphaZero is nice because it enabled us to us MCTS with DL\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "print(1+1)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,34 +21,52 @@
         "id": "KWY0vIj4GYnh",
         "outputId": "57626201-1c8b-4adf-e673-cf36e39c8015"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(1+1)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# MCTS"
-      ],
       "metadata": {
         "id": "HVZIStOIGcqg"
-      }
+      },
+      "source": [
+        "# MCTS"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "SnRagkYhGmAo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
