--- a/docs/source/Generative_Models/EBMs/Score-Bace.ipynb
+++ b/docs/source/Generative_Models/EBMs/Score-Bace.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# AlphaZero\n",
+        "# Score Based Generative Model\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
