--- a/docs/source/Reinforcement_Learning/MuZero/MuZero.ipynb
+++ b/docs/source/Reinforcement_Learning/MuZero/MuZero.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# AlphaZero\n",
+        "# MuZero\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
