--- a/docs/source/Generative_Models/NFs/Normalizing_Flow/Normalizing_Flow.ipynb
+++ b/docs/source/Generative_Models/NFs/Normalizing_Flow/Normalizing_Flow.ipynb
@@ -6,8 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Difference Target Propagetion\n",
-        "\n",
+        "# Normalizing Flow\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
     },
