--- a/docs/source/Optimal_Transport/Application/Application.ipynb
+++ b/docs/source/Optimal_Transport/Application/Application.ipynb
@@ -42,7 +42,7 @@
         "id": "HVZIStOIGcqg"
       },
       "source": [
-        "#### Architecture"
+        "## Architecture"
       ]
     },
     {
