--- a/docs/source/Physics_Informed/PINN/PINN.ipynb
+++ b/docs/source/Physics_Informed/PINN/PINN.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Optimal Transport\n",
+        "# Physics Informed Neural Network\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
