--- a/docs/source/Molecule_Generation/Molecule_Generation/MolGen_with_VAE/MolGen_with_VAE.ipynb
+++ b/docs/source/Molecule_Generation/Molecule_Generation/MolGen_with_VAE/MolGen_with_VAE.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Visualization3: Umap\n",
+        "# Molgen: VAE\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
