--- a/docs/source/Others/Visualize/t-SNE/t-SNE.ipynb
+++ b/docs/source/Others/Visualize/t-SNE/t-SNE.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# t-SNE\n",
+        "# Visualization1: t-SNE\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
