--- a/docs/source/Others/Visualize/Isomap/Isomap.ipynb
+++ b/docs/source/Others/Visualize/Isomap/Isomap.ipynb
@@ -6,7 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Isomap\n",
+        "# Visualizetion2: Isomap\n",
         "\n",
         "AlphaZero is nice because it enabled us to us MCTS with DL\n"
       ]
