change: alphazero dirichret_noise

--- a/docs/source/Reinforcement_Learning/AlphaZero/AlphaZero.ipynb
+++ b/docs/source/Reinforcement_Learning/AlphaZero/AlphaZero.ipynb
@@ -53,6 +53,20 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Dirichret Noise\n",
+        "\n",
+        "diricretnoiseを加えて探索促進もそうだし, アルゴリズム的にはこれがないと一生expandされない子が出てくる"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
