--- a/docs/source/Generative_Models/NFs/Normalizing_Flow/Normalizing_Flow.ipynb
+++ b/docs/source/Generative_Models/NFs/Normalizing_Flow/Normalizing_Flow.ipynb
@@ -6,33 +6,7 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Normalizing Flow\n",
-        "AlphaZero is nice because it enabled us to us MCTS with DL\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KWY0vIj4GYnh",
-        "outputId": "57626201-1c8b-4adf-e673-cf36e39c8015"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2\n"
-          ]
-        }
-      ],
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "print(1+1)"
+        "# Normalizing Flow\n"
       ]
     },
     {
