--- a/docs/source/Geometry/Information_Geometry/Information_Geometry.ipynb
+++ b/docs/source/Geometry/Information_Geometry/Information_Geometry.ipynb
@@ -6,52 +6,8 @@
         "id": "ZurmHQZ2EqbL"
       },
       "source": [
-        "# Information_Geometry\n",
-        "AlphaZero is nice because it enabled us to us MCTS with DL\n"
+        "# Information Geometry"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KWY0vIj4GYnh",
-        "outputId": "57626201-1c8b-4adf-e673-cf36e39c8015"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2\n"
-          ]
-        }
-      ],
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "print(1+1)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HVZIStOIGcqg"
-      },
-      "source": [
-        "## Architecture"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SnRagkYhGmAo"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
