--- a/docs/source/Reinforcement_Learning/MuZero/MuZero.ipynb
+++ b/docs/source/Reinforcement_Learning/MuZero/MuZero.ipynb
@@ -56,14 +56,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        }
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "mcts, ルートノードだけ合法手与えるの天才で草"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
